# hex

./: .clang_complete  main.cpp  meson.build  render.cpp  render.hpp  render2.cpp  render2.hpp  window.cpp  window.hpp
assets/shaders/: ant.comp  automaton.comp  black.frag  color.frag  hex.vert  hex2.vert  hexLine.vert  meson.build
subprojects/: bintoheader.wrap
